<resources>
    <string name="app_name">KnowBook</string>

    <!--BookProvider Strings for toasts-->
    <string name="name_required">A name is required for the book</string>
    <string name="author_required">Author name is required</string>
    <string name="genre_required">A genre is required</string>
    <string name="price_required">Valid Price is required</string>
    <string name="quantity_required">Valid Quantity is required</string>
    <string name="supplier_required">Supplier name is required</string>
    <string name="supplier_num_required">Supplier number required</string>

    <!--BookCursorAdapter strings for setTexts-->
    <string name="in_stock">In stock:" "</string>
    <string name="euro_symbol"> € </string>


    <!--BookCatalog.java strings for the fake testing data in insertBook() method-->
    <string name="remains">Remains of the day</string>
    <string name="ishiguro">Kazuo Ishiguro</string>
    <string name="fake_price">15</string>
    <string name="fake_quantity">12</string>
    <string name="fake_supplier">Me</string>
    <string name="fake_supp_phone">123456789</string>


    <!--activity_book_editor-->
    <string name="book_title_hint">Book Title *</string>
    <string name="author_hint">Author</string>
    <string name="price_hint">Price</string>
    <string name="quantity_hint">Quantity</string>
    <string name="supplier_hint">Supplier\'s Name</string>
    <string name="supplier_num_hint">Supplier\'s Number</string>

    <string name="main_info">Main</string>
    <string name="genre">Genre</string>
    <string name="minus_btn">-</string>
    <string name="plus_btn">+</string>
    <string name="order_btn">Order</string>

    <!--strings for the gender spinner array-->
    <string name="biography">Biography</string>
    <string name="travel">Travel</string>
    <string name="self_help">Self Help</string>
    <string name="history">History</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="religion">Religion, Spirituality, New Age</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="dictionary">Dictionary</string>
    <string name="art">Art</string>
    <string name="cooking">Cooking</string>
    <string name="school">School</string>
    <string name="mystery">Mystery</string>
    <string name="crime">Crime</string>
    <string name="adventure">Adventure</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="horror">Horror</string>
    <string name="drama">Drama</string>
    <string name="theatre">Theatre</string>
    <string name="children">Children</string>
    <string name="poetry">Poetry</string>
    <string name="fantasy">Fantasy</string>
    <string name="novel">Novel</string>
    <string name="comics">Comics</string>
    <string name="other">Other</string>

    <!--menu_book_catalog-->
    <string name="delete_all">Delete all</string>
    <string name="insert_fake_data">Fake testing data</string>

    <!--menu_book_editor-->
    <string name="save">Save</string>
    <string name="delete">Delete entry</string>

    <!--Strings for toasts in BookEditor activity-->
    <string name="success">Book entered successfully</string>
    <string name="unsuccessful">Book not entered</string>
    <string name="update_error">Error with updating book</string>
    <string name="update_success">Book Updated</string>

    <!--strings for show unsaved changes dialog in BookEditor-->
    <string name="alert_dialog">Are you sure you want to exit without saving?</string>
    <string name="discard">Discard</string>
    <string name="stay">Keep Editing</string>

    <string name="delete_fail">delete book fail</string>
    <string name="delete_success">delete successful</string>

    <string name="confirm_delete_all">Are you sure you want to delete all books?</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_no">Cancel</string>

    <!-- string for when quantity is less than 0, in BookCursorAdapter and BookEditor-->
    <string name="no_negative_values">You can\'t have a negative number of books!</string>

    <!--listItem layout sale button string-->
    <string name="sale_btn">Sale</string>


</resources>



